--- a/postMessage/package.json
+++ b/postMessage/package.json
@@ -4,12 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "TARGET=development webpack-dev-server --mode development --progress --port 8080 --open",
+        "start": "TARGET=development webpack-dev-server --mode development --progress --open",
         "build": "TARGET=build webpack src --mode production"
     },
     "author": "",
     "license": "ISC",
-    "devDependencies": {
+    "dependencies": {
         "@babel/core": "^7.4.3",
         "@babel/plugin-proposal-class-properties": "^7.4.0",
         "@babel/plugin-transform-arrow-functions": "^7.2.0",
@@ -34,6 +34,5 @@
         "webpack": "^4.30.0",
         "webpack-cli": "^3.3.0",
         "webpack-dev-server": "^3.3.1"
-    },
-    "dependencies": {}
+    }
 }
