--- a/simpleServiceWorker/package.json
+++ b/simpleServiceWorker/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bundledwebworker",
+    "name": "simpleserviceworker",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -25,6 +25,7 @@
         "eslint-plugin-jsx-a11y": "^6.2.1",
         "eslint-plugin-react": "^7.12.4",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.6.0",
         "node-sass": "^4.11.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
@@ -33,7 +34,6 @@
         "url-loader": "^1.1.2",
         "webpack": "^4.30.0",
         "webpack-cli": "^3.3.0",
-        "webpack-dev-server": "^3.3.1",
-        "worker-loader": "^2.0.0"
+        "webpack-dev-server": "^3.3.1"
     }
 }
