--- a/serviceWorkerLifecycle/package.json
+++ b/serviceWorkerLifecycle/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "TARGET=development webpack-dev-server --mode development --progress --open",
+        "start": "TARGET=development webpack-dev-server --mode development --progress",
         "build": "TARGET=build webpack src --mode production"
     },
     "author": "",
